# Image_Sorter

./: README.md  image_sorter.py  pyproject.toml  requirements.txt
