[tool.poetry]
name = "image_sorter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.5.3"
colorama = "^0.4.4"
tabulate = "^0.8.9"
cvlib = "^0.2.6"
cmake = "^3.21.2"
face-recognition = "^1.3.0"
dlib = "^19.22.1"
wheel = "^0.37.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
